style(variables) fix action column width on small resolution (#2040)
Set min-width to action column to avoid having icons than stack one on the other
Do not use boostrap classes, use percentage width instead

--- a/frontend/app/js/editor/data-panel/data.less
+++ b/frontend/app/js/editor/data-panel/data.less
@@ -49,3 +49,16 @@
 .VariablesTable-sort {
   padding-left: 0.4em;
 }
+
+.VariablesTable-actions {
+  width: 5em;
+}
+
+.VariablesTable-type {
+  width: 20%;
+}
+
+.VariablesTable-name  {
+  width: 25%;
+}
+
